// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightningInvoice should render correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 32,
    }
  }
>
  <View
    style={
      {
        "gap": 32,
      }
    }
  >
    <ForwardRef(AnimatedComponentWrapper)
      style={
        [
          {
            "alignSelf": "center",
            "bottom": "100%",
            "position": "absolute",
          },
          {
            "opacity": 0,
          },
        ]
      }
    >
      <PeachText
        style={
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textAlign": "center",
          }
        }
      >
        copied!
      </PeachText>
    </ForwardRef(AnimatedComponentWrapper)>
    <TouchableOpacity
      onLongPress={[Function]}
      onPress={[Function]}
    >
      <QRCode
        backgroundColor="#FFF9F6"
        size={327}
        value="lightning:lnbc1p..."
      />
    </TouchableOpacity>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "justifyContent": "space-between",
        }
      }
    >
      <PeachText
        style={
          {
            "color": "#9F8C82",
            "flexShrink": 1,
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
          }
        }
      >
        lnbc1p...…lnbc1p...
      </PeachText>
      <ForwardRef
        color={
          {
            "color": "#F56522",
          }
        }
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
        value="lnbc1p..."
      />
    </View>
  </View>
</View>
`;

exports[`LightningInvoice should render correctly for small screens 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 32,
    }
  }
>
  <View
    style={
      {
        "gap": 32,
      }
    }
  >
    <ForwardRef(AnimatedComponentWrapper)
      style={
        [
          {
            "alignSelf": "center",
            "bottom": "100%",
            "position": "absolute",
          },
          {
            "opacity": undefined,
          },
        ]
      }
    >
      <PeachText
        style={
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 22,
            "textAlign": "center",
          }
        }
      >
        copied!
      </PeachText>
    </ForwardRef(AnimatedComponentWrapper)>
    <TouchableOpacity
      onLongPress={[Function]}
      onPress={[Function]}
    >
      <QRCode
        backgroundColor="#FFF9F6"
        size={275}
        value="lightning:lnbc1p..."
      />
    </TouchableOpacity>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "justifyContent": "space-between",
        }
      }
    >
      <PeachText
        style={
          {
            "color": "#9F8C82",
            "flexShrink": 1,
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
          }
        }
      >
        lnbc1p...…lnbc1p...
      </PeachText>
      <ForwardRef
        color={
          {
            "color": "#F56522",
          }
        }
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
        value="lnbc1p..."
      />
    </View>
  </View>
</View>
`;
